--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
+    implementation 'io.coil-kt:coil-compose:2.1.0'
 
     // Koin
     implementation "io.insert-koin:koin-android:$koin_version"
@@ -69,7 +70,7 @@ dependencies {
     implementation "io.ktor:ktor-client-logging-jvm:$ktor_version"
     implementation "io.ktor:ktor-client-content-negotiation:$ktor_version"
     implementation "io.ktor:ktor-serialization-kotlinx-json:$ktor_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1"
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1'
 
     // Media3
     implementation "androidx.media3:media3-exoplayer:$media3_version"
